// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change orientation 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  border-left: 0.0625rem solid;
  height: auto;
  -webkit-margin-start: var(--chakra-space-2);
  margin-inline-start: var(--chakra-space-2);
  -webkit-margin-end: var(--chakra-space-2);
  margin-inline-end: var(--chakra-space-2);
  opacity: 0.6;
  border-color: inherit;
}

<hr
    aria-orientation="vertical"
    class="emotion-0"
    data-chakra-component="CDivider"
    data-testid="divider"
  />
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 0;
  border-bottom: 0.0625rem solid;
  width: auto;
  margin-top: var(--chakra-space-2);
  margin-bottom: var(--chakra-space-2);
  opacity: 0.6;
  border-color: inherit;
}

<hr
    aria-orientation="horizontal"
    class="emotion-0"
    data-chakra-component="CDivider"
    data-testid="divider"
  />
</DocumentFragment>
`;
